tests/codegen/fail/scalar/type_alias/attr_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/type_alias/attr_invalid_url.rs:6:24
  |
6 |     specified_by_url = "not an url",
  |                        ^^^^^^^^^^^^
